--- a/META.yml
+++ b/META.yml
@@ -1,12 +1,43 @@
-# http://module-build.sourceforge.net/META-spec.html
-#XXXXXXX This is a prototype!!!  It will change in the future!!! XXXXX#
+--- #YAML:1.0
 name:         MIME-Charset
-version:      1.006.2
-version_from: Charset.pm
-installdirs:  site
+abstract:     Charset Informations for MIME
+version:      1.006.3
+author:
+  - Hatuka*nezumi - IKEDA Soji <hatuka@nezumi.nu>
+license:      perl
+distribution_type: module
 requires:
     Encode:                        1.98
+    perl:                          5.005
+optional_features:
+- ja_extended:
+    description: Extended mappings for Japanese codepages.
+    requires:
+        Encode::EUCJPMS:           0.06
+- jis2000:
+    description: Additional mappings for JIS X 0213\:2000.
+    requires:
+        Encode::JIS2K:             0.02
+- zh_extra:
+    description: Additional mappings for Chinese standards.
+    requires:
+        Encode::HanExtra:          0.20
+build_requires:
     Test:                          0
+provides:
+    MIME::Charset:
+        file:                      Charset.pm
+        version:                   1.006.3
+    MIME::Charset::Defaults:
+        file:                      Charset/Defaults.pm.sample
+        version:                   1.006.3
+    MIME::Charset::JA_JP:
+        file:                      Charset/JA_JP.pod
+        version:                   1.006.3
+resources:
+    repository: http://hatuka.nezumi.nu/repos/MIME-Charset/
+meta-spec:
+   version: 1.3
+   url: http://module-build.sourceforge.net/META-spec-v1.3.html
+generated_by: author
 
-distribution_type: module
-generated_by: ExtUtils::MakeMaker version 6.17
