--- a/META.yml
+++ b/META.yml
@@ -23,7 +23,7 @@ optional_features:
     requires:
         Encode::HanExtra:          0.20
 build_requires:
-    Test:                          0
+    Test::More:                    0
 provides:
     MIME::Charset:
         file:                      Charset.pm
