.travis.yml: Adding dependency for 05jp.t and pod.t

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_install:
   - perl -V
 
 install:
-  - cpanm --notest --quiet Test::More
+  - cpanm --notest --quiet Test::More Test::Pod
   - cpanm --installdeps --notest --quiet .
+  - cpanm --notest --quiet Encode::EUCJPASCII
 
